--- a/Insta-practice/Base.lproj/Main.storyboard
+++ b/Insta-practice/Base.lproj/Main.storyboard
@@ -23,6 +23,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="574" y="73"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="tzo-j4-QVh">
