--- a/Insta-practice/Base.lproj/Main.storyboard
+++ b/Insta-practice/Base.lproj/Main.storyboard
@@ -77,13 +77,46 @@
                     <view key="view" contentMode="scaleToFill" id="kKj-DZ-Gjb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rpi-Kq-tel">
+                                <rect key="frame" x="37.5" y="100" width="300" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="maJ-65-29e"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EAR-sq-X9d">
+                                <rect key="frame" x="37.5" y="140" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="QVV-Pt-QHu"/>
+                                </constraints>
+                                <state key="normal" title="表示名を変更" backgroundImage="btn"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PdX-KS-SHC">
+                                <rect key="frame" x="37.5" y="190" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="L2e-KX-da1"/>
+                                </constraints>
+                                <state key="normal" title="ログアウト" backgroundImage="btn"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="PdX-KS-SHC" firstAttribute="centerX" secondItem="kKj-DZ-Gjb" secondAttribute="centerX" id="1xD-Bp-7oc"/>
+                            <constraint firstItem="Rpi-Kq-tel" firstAttribute="top" secondItem="4az-2h-RXm" secondAttribute="top" constant="80" id="CeG-q9-g5Q"/>
+                            <constraint firstItem="EAR-sq-X9d" firstAttribute="top" secondItem="Rpi-Kq-tel" secondAttribute="bottom" constant="10" id="Svk-Ow-ze4"/>
+                            <constraint firstItem="EAR-sq-X9d" firstAttribute="centerX" secondItem="kKj-DZ-Gjb" secondAttribute="centerX" id="gAA-eh-hT3"/>
+                            <constraint firstItem="PdX-KS-SHC" firstAttribute="top" secondItem="EAR-sq-X9d" secondAttribute="bottom" constant="10" id="o72-v5-WAv"/>
+                            <constraint firstItem="Rpi-Kq-tel" firstAttribute="centerX" secondItem="kKj-DZ-Gjb" secondAttribute="centerX" id="ze7-FH-G48"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="4az-2h-RXm"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="29E-fu-kOm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="854" y="893"/>
+            <point key="canvasLocation" x="910" y="806"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="V0e-kI-pRu">
@@ -102,7 +135,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="パスワード" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qzi-7R-uLo">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="パスワードは6文字以上" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qzi-7R-uLo">
                                 <rect key="frame" x="37.5" y="140" width="300" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="0ef-3m-6Hi"/>
